--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "better-scroll": "^2.3.0",
         "core-js": "^3.6.5",
         "vue": "^3.0.0",
-        "vue-router": "^4.0.4"
+        "vue-router": "^4.0.4",
+        "xlsx": "^0.16.9"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.0",
